--- a/Exercícios/Exercício parte 3 - Verificador de idade/style.css
+++ b/Exercícios/Exercício parte 3 - Verificador de idade/style.css
@@ -9,7 +9,7 @@ header {
 }
 
 section {
-    width: 500px;
+    width: 100%;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
@@ -17,12 +17,19 @@ section {
     margin: auto;
 }
 
-select{
-    width: 200px;
-}
-
 footer {
     color: white;
     text-align: center;
     font-style: italic;
 }
+
+div {
+    text-align: center;
+}
+
+@media (min-width:799px){
+    section{
+       width: 50%;
+    }
+}
+
