--- a/Exercícios/Exercício parte 6 - Tabuada/style.css
+++ b/Exercícios/Exercício parte 6 - Tabuada/style.css
@@ -9,7 +9,7 @@ header {
 }
 
 section {
-    width: 500px;
+    width: 50%;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
